--- a/Samples/Company.Mvc/Web.config
+++ b/Samples/Company.Mvc/Web.config
@@ -1,4 +1,4 @@
-﻿<?xml version="1.0" encoding="utf-8"?>
+<?xml version="1.0" encoding="utf-8"?>
 <!--
   有关如何配置 ASP.NET 应用程序的详细信息，请访问
   http://go.microsoft.com/fwlink/?LinkId=152368
@@ -18,6 +18,7 @@
     <add key="PreserveLoginUrl" value="true" />
     <add key="ClientValidationEnabled" value="true" />
     <add key="UnobtrusiveJavaScriptEnabled" value="true" />
+    <add key="ComBoostAuthenticationKey" value="4beS2F3MMEmWDV4D6LHATQ==" />
   </appSettings>
   <system.web>
     <httpRuntime targetFramework="4.5" />
@@ -66,6 +67,7 @@
   <system.webServer>
     <validation validateIntegratedModeConfiguration="false" />
     <modules>
+      <remove  name="FormsAuthentication"/>
       <add name="ComBoostAuthentication" type="System.Web.Security.ComBoostAuthenticationModule"/>
     </modules>
     <handlers>
