--- a/Samples/Company.Entity/Company.Entity.csproj
+++ b/Samples/Company.Entity/Company.Entity.csproj
@@ -46,6 +46,7 @@
     <Compile Include="Employee.cs" />
     <Compile Include="EmployeeGroup.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="LocationProvider.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
