--- a/Wodsoft.ComBoost/Wodsoft.ComBoost.csproj
+++ b/Wodsoft.ComBoost/Wodsoft.ComBoost.csproj
@@ -86,6 +86,12 @@
     <Compile Include="Data\Entity\IPassword.cs" />
     <Compile Include="Data\Entity\UserBase.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Runtime\Serialization\Formatters\ExpressionSerializer.cs">
+      <SubType>Code</SubType>
+    </Compile>
+    <Compile Include="Runtime\Serialization\Formatters\SerializerHeader.cs">
+      <SubType>Code</SubType>
+    </Compile>
   </ItemGroup>
   <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
