--- a/Wodsoft.ComBoost.Mvc/Wodsoft.ComBoost.Mvc.csproj
+++ b/Wodsoft.ComBoost.Mvc/Wodsoft.ComBoost.Mvc.csproj
@@ -54,6 +54,7 @@
     <Reference Include="System.ComponentModel.DataAnnotations" />
     <Reference Include="System.Configuration" />
     <Reference Include="System.Core" />
+    <Reference Include="System.Transactions" />
     <Reference Include="System.Web" />
     <Reference Include="System.Web.Helpers, Version=3.0.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL">
       <SpecificVersion>False</SpecificVersion>
