--- a/Wodsoft.ComBoost/Wodsoft.ComBoost.csproj
+++ b/Wodsoft.ComBoost/Wodsoft.ComBoost.csproj
@@ -73,9 +73,12 @@
     <Compile Include="ComponentModel\EntityParentModel.cs" />
     <Compile Include="ComponentModel\EntitySearchItem.cs" />
     <Compile Include="ComponentModel\EntitySearchModel.cs" />
-    <Compile Include="ComponentModel\EntityViewButton.cs" />
+    <Compile Include="ComponentModel\IEntityViewButton.cs" />
     <Compile Include="ComponentModel\EntityViewModel.cs" />
+    <Compile Include="ComponentModel\IEntityEditModel.cs" />
+    <Compile Include="ComponentModel\IEntityViewModel.cs" />
     <Compile Include="ComponentModel\IPagination.cs" />
+    <Compile Include="ComponentModel\IViewButton.cs" />
     <Compile Include="ComponentModel\NotifyBase.cs" />
     <Compile Include="ComponentModel\Pagination.cs" />
     <Compile Include="ComponentModel\IValueFilter.cs" />
@@ -87,8 +90,14 @@
     <Compile Include="Data\Entity\IRoleEntity.cs" />
     <Compile Include="Data\Entity\Metadata\EntityAnalyzer.cs" />
     <Compile Include="Data\Entity\Metadata\EntityMetadata.cs" />
-    <Compile Include="Data\Entity\Metadata\PropertyMetadata.cs" />
+    <Compile Include="Data\Entity\Metadata\EntityMetadataBase.cs" />
+    <Compile Include="Data\Entity\Metadata\IEntityAnalyzer.cs" />
+    <Compile Include="Data\Entity\Metadata\IEntityMetadata.cs" />
+    <Compile Include="Data\Entity\Metadata\IPropertyMetadata.cs" />
+    <Compile Include="Data\Entity\Metadata\PropertyExtension.cs" />
+    <Compile Include="Data\Entity\Metadata\ClrPropertyMetadata.cs" />
     <Compile Include="Data\Entity\IPassword.cs" />
+    <Compile Include="Data\Entity\Metadata\PropertyMetadataBase.cs" />
     <Compile Include="Data\Entity\UserBase.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Runtime\Serialization\ComBoostSerializer.cs" />
