--- a/Wodsoft.ComBoost.EntityFramework/Wodsoft.ComBoost.EntityFramework.csproj
+++ b/Wodsoft.ComBoost.EntityFramework/Wodsoft.ComBoost.EntityFramework.csproj
@@ -58,6 +58,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Data\Entity\EntityContextBuilder.cs" />
+    <Compile Include="Data\Entity\EntityExtensions.cs" />
     <Compile Include="Data\Entity\EntityQueryable.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
