--- a/src/Wodsoft.ComBoost.EntityFramework/project.json
+++ b/src/Wodsoft.ComBoost.EntityFramework/project.json
@@ -6,18 +6,13 @@
   "projectUrl": "",
   "licenseUrl": "",
   "frameworks": {
-    "net451": { },
-    "dotnet5.4": {
-      "dependencies": {
-        "Microsoft.CSharp": "4.0.1-beta-23516",
-        "System.Collections": "4.0.11-beta-23516",
-        "System.Linq": "4.0.1-beta-23516",
-        "System.Runtime": "4.0.21-beta-23516",
-        "System.Threading": "4.0.11-beta-23516"
-      }
+    "netstandard1.5": {
+      "imports": "dnxcore50"
     }
   },
   "dependencies": {
-    "EntityFramework.Core": "7.0.0-rc1-final"
+    "Ix-Async": "1.2.5",
+    "Microsoft.EntityFrameworkCore": "1.0.0-rc2-final",
+    "Wodsoft.ComBoost.Data": "1.0.0-*"
   }
 }
