--- a/src/Wodsoft.ComBoost/project.json
+++ b/src/Wodsoft.ComBoost/project.json
@@ -3,22 +3,16 @@
   "description": "Wodsoft.ComBoost Class Library",
   "authors": [ "Kation" ],
   "tags": [ "" ],
-  "projectUrl": "",
+  "projectUrl": "http://comboost.wodsoft.com",
   "licenseUrl": "",
   "frameworks": {
-    "net451": { },
-    "dotnet5.4": {
-      "dependencies": {
-        "Microsoft.CSharp": "4.0.1-beta-23516",
-        "System.Collections": "4.0.11-beta-23516",
-        "System.Linq": "4.0.1-beta-23516",
-        "System.Runtime": "4.0.21-beta-23516",
-        "System.Threading": "4.0.11-beta-23516"
-      }
+    "netstandard1.5": {
+      "imports": "dnxcore50"
     }
   },
   "dependencies": {
-    "System.ComponentModel": "4.0.0",
+    "Microsoft.CSharp": "4.0.1-rc2-24027",
+    "System.Reflection.Extensions": "4.0.1-rc2-24027",
     "Wodsoft.ComBoost.Core": "1.0.0-*"
   }
 }
