--- a/src/samples/Wodsoft.ComBoost.Forum.Domain/project.json
+++ b/src/samples/Wodsoft.ComBoost.Forum.Domain/project.json
@@ -6,19 +6,14 @@
   "projectUrl": "",
   "licenseUrl": "",
   "frameworks": {
-    "net451": { },
-    "dotnet5.4": {
-      "dependencies": {
-        "Microsoft.CSharp": "4.0.1-beta-23516",
-        "System.Collections": "4.0.11-beta-23516",
-        "System.Linq": "4.0.1-beta-23516",
-        "System.Runtime": "4.0.21-beta-23516",
-        "System.Threading": "4.0.11-beta-23516"
-      }
+    "netstandard1.5": {
+      "imports": "dnxcore50"
     }
   },
   "dependencies": {
+    "Wodsoft.ComBoost": "1.0.0-*",
     "Wodsoft.ComBoost.Core": "1.0.0-*",
-    "Wodsoft.ComBoost.Data": "1.0.0-*"
+    "Wodsoft.ComBoost.Data": "1.0.0-*",
+    "Wodsoft.ComBoost.Security": "1.0.0-*"
   }
 }
