--- a/src/Wodsoft.ComBoost.Data/project.json
+++ b/src/Wodsoft.ComBoost.Data/project.json
@@ -12,6 +12,9 @@
   },
   "dependencies": {
     "System.ComponentModel.Annotations": "4.1.0-rc2-24027",
-    "Wodsoft.ComBoost.Core": "1.0.0-*"
+    "System.Linq.Queryable": "4.0.1-rc2-24027",
+    "Wodsoft.ComBoost": "1.0.0-*",
+    "Wodsoft.ComBoost.Core": "1.0.0-*",
+    "Wodsoft.ComBoost.Security": "1.0.0-*"
   }
 }
