--- a/src/samples/Wodsoft.ComBoost.Forum/Properties/launchSettings.json
+++ b/src/samples/Wodsoft.ComBoost.Forum/Properties/launchSettings.json
@@ -1,7 +1,7 @@
 {
   "iisSettings": {
-    "windowsAuthentication": false,
-    "anonymousAuthentication": true,
+    "windowsAuthentication": true,
+    "anonymousAuthentication": false,
     "iisExpress": {
       "applicationUrl": "http://localhost:6132/",
       "sslPort": 0
@@ -20,6 +20,9 @@
       "environmentVariables": {
         "Hosting:Environment": "Development"
       }
+    },
+    "Wodsoft.ComBoost.Forum": {
+      "commandName": "Project"
     }
   }
 }
