--- a/src/samples/Wodsoft.ComBoost.Forum/appsettings.json
+++ b/src/samples/Wodsoft.ComBoost.Forum/appsettings.json
@@ -1,8 +1,11 @@
 ﻿{
+  "ConnectionStrings": {
+    "DefaultConnection": "Server=(localdb)\\mssqllocaldb;Database=aspnet-WebApplication1-d9a5c2eb-2a77-4732-81b0-ed7952cb08fa;Trusted_Connection=True;MultipleActiveResultSets=true"
+  },
   "Logging": {
     "IncludeScopes": false,
     "LogLevel": {
-      "Default": "Verbose",
+      "Default": "Debug",
       "System": "Information",
       "Microsoft": "Information"
     }
