--- a/src/samples/Wodsoft.ComBoost.Forum/project.json
+++ b/src/samples/Wodsoft.ComBoost.Forum/project.json
@@ -22,7 +22,9 @@
     "Microsoft.VisualStudio.Web.BrowserLink.Loader": "14.0.0-rc2-final",
     "Microsoft.EntityFrameworkCore": "1.0.0-rc2-final",
     "Microsoft.EntityFrameworkCore.SqlServer": "1.0.0-rc2-final",
-    "System.ComponentModel.Annotations": "4.1.0-rc2-24027"
+    "System.ComponentModel.Annotations": "4.1.0-rc2-24027",
+    "Microsoft.AspNetCore.Identity": "1.0.0-rc2-final",
+    "Wodsoft.ComBoost.AspNetCore.Security": "1.0.0-*"
   },
 
   "tools": {
