--- a/src/Wodsoft.ComBoost.Data/project.json
+++ b/src/Wodsoft.ComBoost.Data/project.json
@@ -11,6 +11,7 @@
     }
   },
   "dependencies": {
+    "NETStandard.Library": "1.5.0-rc2-24027",
     "System.ComponentModel.Annotations": "4.1.0-rc2-24027",
     "System.Linq.Queryable": "4.0.1-rc2-24027",
     "Wodsoft.ComBoost": "1.0.0-*",
