--- a/src/Wodsoft.ComBoost.EntityFramework/project.json
+++ b/src/Wodsoft.ComBoost.EntityFramework/project.json
@@ -11,6 +11,7 @@
     }
   },
   "dependencies": {
+    "NETStandard.Library": "1.5.0-rc2-24027",
     "Ix-Async": "1.2.5",
     "Microsoft.EntityFrameworkCore": "1.0.0-rc2-final",
     "Wodsoft.ComBoost.Data": "1.0.0-*"
