--- a/src/Wodsoft.ComBoost.Mvc/project.json
+++ b/src/Wodsoft.ComBoost.Mvc/project.json
@@ -11,6 +11,7 @@
     }
   },
   "dependencies": {
+    "NETStandard.Library": "1.5.0-rc2-24027",
     "Microsoft.AspNetCore.Mvc.ViewFeatures": "1.0.0-rc2-final",
     "Microsoft.Extensions.DependencyInjection": "1.0.0-rc2-final",
     "Wodsoft.ComBoost": "1.0.0-*",
