--- a/src/Wodsoft.ComBoost.Security/project.json
+++ b/src/Wodsoft.ComBoost.Security/project.json
@@ -11,6 +11,7 @@
     }
   },
   "dependencies": {
+    "NETStandard.Library": "1.5.0-rc2-24027",
     "System.Security.Principal": "4.0.1-rc2-24027"
   }
 }
