--- a/src/Wodsoft.ComBoost.Mvc.Data/project.json
+++ b/src/Wodsoft.ComBoost.Mvc.Data/project.json
@@ -11,6 +11,7 @@
     }
   },
   "dependencies": {
+    "Microsoft.OData.Core": "6.15.0",
     "NETStandard.Library": "1.5.0-rc2-24027",
     "Wodsoft.ComBoost.Data": "1.0.0-*",
     "Wodsoft.ComBoost.Mvc": "1.0.0-*"
