--- a/src/Wodsoft.ComBoost.EntityFramework/project.json
+++ b/src/Wodsoft.ComBoost.EntityFramework/project.json
@@ -7,12 +7,15 @@
   "licenseUrl": "",
   "frameworks": {
     "netstandard1.5": {
-      "imports": "dnxcore50"
+      "imports": [
+        "dnxcore50",
+        "portable-net45+win8+wp8+wpa81",
+        "portable-net45+win8+wp8"
+      ]
     }
   },
   "dependencies": {
     "NETStandard.Library": "1.5.0-rc2-24027",
-    "Ix-Async": "1.2.5",
     "Microsoft.EntityFrameworkCore": "1.0.0-rc2-final",
     "Wodsoft.ComBoost.Data": "1.0.0-*"
   }
