--- a/src/Wodsoft.ComBoost.Security/project.json
+++ b/src/Wodsoft.ComBoost.Security/project.json
@@ -12,6 +12,7 @@
   },
   "dependencies": {
     "NETStandard.Library": "1.5.0-rc2-24027",
+    "System.Security.Claims": "4.0.1-rc2-24027",
     "System.Security.Principal": "4.0.1-rc2-24027"
   }
 }
