--- a/src/samples/Wodsoft.ComBoost.Forum/Properties/launchSettings.json
+++ b/src/samples/Wodsoft.ComBoost.Forum/Properties/launchSettings.json
@@ -1,7 +1,7 @@
 {
   "iisSettings": {
-    "windowsAuthentication": true,
-    "anonymousAuthentication": false,
+    "windowsAuthentication": false,
+    "anonymousAuthentication": true,
     "iisExpress": {
       "applicationUrl": "http://localhost:6132/",
       "sslPort": 0
