--- a/src/samples/Wodsoft.ComBoost.Forum.Core/project.json
+++ b/src/samples/Wodsoft.ComBoost.Forum.Core/project.json
@@ -10,5 +10,8 @@
     "netstandard1.5": {
       "imports": "dnxcore50"
     }
+  },
+  "dependencies": {
+    "NETStandard.Library": "1.5.0-rc2-24027"
   }
 }
