--- a/src/samples/Wodsoft.ComBoost.Forum.Entity/project.json
+++ b/src/samples/Wodsoft.ComBoost.Forum.Entity/project.json
@@ -11,5 +11,7 @@
     }
   },
   "dependencies": {
+    "NETStandard.Library": "1.5.0-rc2-24027",
+    "Wodsoft.ComBoost.Forum.Core": "1.0.0-*"
   }
 }
