--- a/src/samples/Wodsoft.ComBoost.Forum/project.json
+++ b/src/samples/Wodsoft.ComBoost.Forum/project.json
@@ -23,7 +23,11 @@
     "Microsoft.EntityFrameworkCore": "1.0.0-rc2-final",
     "Microsoft.EntityFrameworkCore.SqlServer": "1.0.0-rc2-final",
     "System.ComponentModel.Annotations": "4.1.0-rc2-24027",
-    "Wodsoft.ComBoost.AspNetCore.Security": "1.0.0-*"
+    "Wodsoft.ComBoost.AspNetCore.Security": "1.0.0-*",
+    "Wodsoft.ComBoost.EntityFramework": "1.0.0-*",
+    "Wodsoft.ComBoost.Forum.Entity": "1.0.0-*",
+    "Wodsoft.ComBoost.Forum.Domain": "1.0.0-*",
+    "Wodsoft.ComBoost.Mvc.Data": "1.0.0-*"
   },
 
   "tools": {
