--- a/src/Wodsoft.ComBoost.Mvc/project.json
+++ b/src/Wodsoft.ComBoost.Mvc/project.json
@@ -15,6 +15,7 @@
     "Microsoft.AspNetCore.Mvc.ViewFeatures": "1.0.0-rc2-final",
     "Microsoft.Extensions.DependencyInjection": "1.0.0-rc2-final",
     "Wodsoft.ComBoost": "1.0.0-*",
-    "Wodsoft.ComBoost.Core": "1.0.0-*"
+    "Wodsoft.ComBoost.Core": "1.0.0-*",
+    "Wodsoft.ComBoost.AspNetCore.Security": "1.0.0-*"
   }
 }
