--- a/src/samples/Wodsoft.ComBoost.Forum/project.json
+++ b/src/samples/Wodsoft.ComBoost.Forum/project.json
@@ -27,7 +27,8 @@
     "Wodsoft.ComBoost.EntityFramework": "1.0.0-*",
     "Wodsoft.ComBoost.Forum.Entity": "1.0.0-*",
     "Wodsoft.ComBoost.Forum.Domain": "1.0.0-*",
-    "Wodsoft.ComBoost.Mvc.Data": "1.0.0-*"
+    "Wodsoft.ComBoost.Mvc.Data": "1.0.0-*",
+    "Microsoft.AspNetCore.Session": "1.0.0-rc2-final"
   },
 
   "tools": {
