--- a/src/Wodsoft.ComBoost.Mvc/project.json
+++ b/src/Wodsoft.ComBoost.Mvc/project.json
@@ -16,6 +16,7 @@
     "Microsoft.Extensions.DependencyInjection": "1.0.0-rc2-final",
     "Wodsoft.ComBoost": "1.0.0-*",
     "Wodsoft.ComBoost.Core": "1.0.0-*",
-    "Wodsoft.ComBoost.AspNetCore.Security": "1.0.0-*"
+    "Wodsoft.ComBoost.AspNetCore.Security": "1.0.0-*",
+    "Microsoft.Extensions.Options": "1.0.0-rc2-final"
   }
 }
