--- a/src/samples/Wodsoft.ComBoost.Forum.Core/project.json
+++ b/src/samples/Wodsoft.ComBoost.Forum.Core/project.json
@@ -1,4 +1,4 @@
-﻿{
+{
   "version": "1.0.0-*",
   "description": "Wodsoft.ComBoost.Forum.Core Class Library",
   "authors": [ "Kation" ],
@@ -12,6 +12,7 @@
     }
   },
   "dependencies": {
-    "NETStandard.Library": "1.5.0-rc2-24027"
+    "NETStandard.Library": "1.5.0-rc2-24027",
+    "Wodsoft.ComBoost.Data": "1.0.0-*"
   }
 }
