--- a/src/samples/Wodsoft.ComBoost.Forum.Entity/project.json
+++ b/src/samples/Wodsoft.ComBoost.Forum.Entity/project.json
@@ -12,6 +12,7 @@
   },
   "dependencies": {
     "NETStandard.Library": "1.5.0-rc2-24027",
+    "System.Security.Cryptography.Algorithms": "4.1.0-rc2-24027",
     "Wodsoft.ComBoost.Forum.Core": "1.0.0-*"
   }
 }
