--- a/src/samples/Wodsoft.ComBoost.Forum.Domain/project.json
+++ b/src/samples/Wodsoft.ComBoost.Forum.Domain/project.json
@@ -2,9 +2,6 @@
   "version": "1.0.0-*",
   "description": "Wodsoft.ComBoost.Forum.Domain Class Library",
   "authors": [ "Kation" ],
-  "tags": [ "" ],
-  "projectUrl": "",
-  "licenseUrl": "",
   "frameworks": {
     "netstandard1.5": {
       "imports": "dnxcore50"
@@ -14,6 +11,7 @@
     "Wodsoft.ComBoost": "1.0.0-*",
     "Wodsoft.ComBoost.Core": "1.0.0-*",
     "Wodsoft.ComBoost.Data": "1.0.0-*",
+    "Wodsoft.ComBoost.Forum.Core": "1.0.0-*",
     "Wodsoft.ComBoost.Security": "1.0.0-*"
   }
 }
