--- a/src/samples/Wodsoft.ComBoost.Forum/project.json
+++ b/src/samples/Wodsoft.ComBoost.Forum/project.json
@@ -28,7 +28,8 @@
     "Wodsoft.ComBoost.Forum.Entity": "1.0.0-*",
     "Wodsoft.ComBoost.Forum.Domain": "1.0.0-*",
     "Wodsoft.ComBoost.Mvc.Data": "1.0.0-*",
-    "Microsoft.AspNetCore.Session": "1.0.0-rc2-final"
+    "Microsoft.AspNetCore.Session": "1.0.0-rc2-final",
+    "Microsoft.EntityFrameworkCore.Tools": "1.0.0-preview1-final"
   },
   "tools": {
     "Microsoft.AspNetCore.Razor.Tools": {
@@ -38,6 +39,13 @@
     "Microsoft.AspNetCore.Server.IISIntegration.Tools": {
       "version": "1.0.0-preview1-final",
       "imports": "portable-net45+win8+dnxcore50"
+    },
+    "Microsoft.EntityFrameworkCore.Tools": {
+      "version": "1.0.0-preview1-final",
+      "imports": [
+        "portable-net45+win8+dnxcore50",
+        "portable-net45+win8"
+      ]
     }
   },
 
