--- a/src/Wodsoft.ComBoost.AspNetCore.Security/project.json
+++ b/src/Wodsoft.ComBoost.AspNetCore.Security/project.json
@@ -3,13 +3,13 @@
 
   "dependencies": {
     "Microsoft.AspNetCore.Authentication": "1.0.0-rc2-final",
-    "NETStandard.Library": "1.5.0-rc2-24027",
     "Wodsoft.ComBoost.Security": "1.0.0-*"
   },
 
   "frameworks": {
     "netstandard1.5": {
       "imports": "dnxcore50"
-    }
+    },
+    "net451": { }
   }
 }
