--- a/src/Wodsoft.ComBoost.Core/project.json
+++ b/src/Wodsoft.ComBoost.Core/project.json
@@ -8,14 +8,24 @@
   },
   "frameworks": {
     "netstandard1.5": {
-      "imports": "dnxcore50"
+      "imports": "dnxcore50",
+      "dependencies": {
+        "System.Dynamic.Runtime": "4.0.11-rc2-24027",
+        "System.Reflection.TypeExtensions": "4.1.0-rc2-24027",
+        "System.ComponentModel.TypeConverter": "4.0.1-rc2-24027",
+        "NETStandard.Library": "1.5.0-rc2-24027"
+      }
+    },
+    "net451": {
+      "frameworkAssemblies": {
+        "System.Dynamic.Runtime": "4.0.0.0",
+        "System.Runtime": {
+          "type": "build"
+        }
+      }
     }
   },
   "dependencies": {
-    "NETStandard.Library": "1.5.0-rc2-24027",
-    "Microsoft.Extensions.DependencyInjection.Abstractions": "1.0.0-rc2-final",
-    "System.Dynamic.Runtime": "4.0.11-rc2-24027",
-    "System.Reflection.TypeExtensions": "4.1.0-rc2-24027",
-    "System.ComponentModel.TypeConverter": "4.0.1-rc2-24027"
+    "Microsoft.Extensions.DependencyInjection.Abstractions": "1.0.0-rc2-final"
   }
 }
