--- a/src/Wodsoft.ComBoost.Data/project.json
+++ b/src/Wodsoft.ComBoost.Data/project.json
@@ -4,13 +4,19 @@
   "authors": [ "Kation" ],
   "frameworks": {
     "netstandard1.5": {
-      "imports": "dnxcore50"
+      "imports": "dnxcore50",
+      "dependencies": {
+        "System.ComponentModel.Annotations": "4.1.0-rc2-24027",
+        "System.Linq.Queryable": "4.0.1-rc2-24027"
+      }
+    },
+    "net451": {
+      "frameworkAssemblies": {
+        "System.ComponentModel.DataAnnotations": "4.0.0.0"
+      }
     }
   },
   "dependencies": {
-    "NETStandard.Library": "1.5.0-rc2-24027",
-    "System.ComponentModel.Annotations": "4.1.0-rc2-24027",
-    "System.Linq.Queryable": "4.0.1-rc2-24027",
     "Wodsoft.ComBoost": "1.0.0-*",
     "Wodsoft.ComBoost.Core": "1.0.0-*",
     "Wodsoft.ComBoost.Security": "1.0.0-*"
