--- a/src/Wodsoft.ComBoost.EntityFramework/project.json
+++ b/src/Wodsoft.ComBoost.EntityFramework/project.json
@@ -9,10 +9,10 @@
         "portable-net45+win8+wp8+wpa81",
         "portable-net45+win8+wp8"
       ]
-    }
+    },
+    "net451": { }
   },
   "dependencies": {
-    "NETStandard.Library": "1.5.0-rc2-24027",
     "Microsoft.EntityFrameworkCore": "1.0.0-rc2-final",
     "Wodsoft.ComBoost.Data": "1.0.0-*"
   }
