--- a/src/Wodsoft.ComBoost.AspNetCore.Security/project.json
+++ b/src/Wodsoft.ComBoost.AspNetCore.Security/project.json
@@ -2,13 +2,13 @@
   "version": "1.0.0-*",
 
   "dependencies": {
-    "Microsoft.AspNetCore.Authentication": "1.0.0-rc2-final",
+    "Microsoft.AspNetCore.Authentication": "1.0.0",
     "Wodsoft.ComBoost.Security": "1.0.0-*"
   },
 
   "frameworks": {
     "netstandard1.5": {
-      "imports": "dnxcore50"
+      "imports": ""
     },
     "net451": { }
   }
