--- a/src/Wodsoft.ComBoost.Core/project.json
+++ b/src/Wodsoft.ComBoost.Core/project.json
@@ -10,10 +10,10 @@
     "netstandard1.5": {
       "imports": "dnxcore50",
       "dependencies": {
-        "System.Dynamic.Runtime": "4.0.11-rc2-24027",
-        "System.Reflection.TypeExtensions": "4.1.0-rc2-24027",
-        "System.ComponentModel.TypeConverter": "4.0.1-rc2-24027",
-        "NETStandard.Library": "1.5.0-rc2-24027"
+        "System.Reflection.TypeExtensions": "4.1.0",
+        "System.Dynamic.Runtime": "4.0.11",
+        "System.ComponentModel.TypeConverter": "4.1.0",
+        "NETStandard.Library": "1.6.0"
       }
     },
     "net451": {
@@ -26,6 +26,6 @@
     }
   },
   "dependencies": {
-    "Microsoft.Extensions.DependencyInjection.Abstractions": "1.0.0-rc2-final"
+    "Microsoft.Extensions.DependencyInjection.Abstractions": "1.0.0"
   }
 }
