--- a/src/Wodsoft.ComBoost.Data/project.json
+++ b/src/Wodsoft.ComBoost.Data/project.json
@@ -4,10 +4,8 @@
   "authors": [ "Kation" ],
   "frameworks": {
     "netstandard1.5": {
-      "imports": "dnxcore50",
+      "imports": "",
       "dependencies": {
-        "System.ComponentModel.Annotations": "4.1.0-rc2-24027",
-        "System.Linq.Queryable": "4.0.1-rc2-24027"
       }
     },
     "net451": {
@@ -17,6 +15,8 @@
     }
   },
   "dependencies": {
+    "System.ComponentModel.Annotations": "4.1.0",
+    "System.Linq.Queryable": "4.0.1",
     "Wodsoft.ComBoost": "1.0.0-*",
     "Wodsoft.ComBoost.Core": "1.0.0-*",
     "Wodsoft.ComBoost.Security": "1.0.0-*"
