--- a/src/Wodsoft.ComBoost.Mvc/project.json
+++ b/src/Wodsoft.ComBoost.Mvc/project.json
@@ -3,17 +3,17 @@
   "description": "Wodsoft.ComBoost.Mvc Class Library",
   "authors": [ "Kation" ],
   "frameworks": {
-    "netstandard1.5": {
-      "imports": "dnxcore50"
+    "netstandard1.6": {
+      "imports": ""
     },
     "net451": { }
   },
   "dependencies": {
-    "Microsoft.AspNetCore.Mvc.ViewFeatures": "1.0.0-rc2-final",
-    "Microsoft.Extensions.DependencyInjection": "1.0.0-rc2-final",
     "Wodsoft.ComBoost": "1.0.0-*",
     "Wodsoft.ComBoost.Core": "1.0.0-*",
     "Wodsoft.ComBoost.AspNetCore.Security": "1.0.0-*",
-    "Microsoft.Extensions.Options": "1.0.0-rc2-final"
+    "Microsoft.AspNetCore.Mvc.ViewFeatures": "1.0.0",
+    "Microsoft.Extensions.DependencyInjection": "1.0.0",
+    "Microsoft.Extensions.Options": "1.0.0"
   }
 }
