--- a/src/Wodsoft.ComBoost.Security/project.json
+++ b/src/Wodsoft.ComBoost.Security/project.json
@@ -4,15 +4,15 @@
   "authors": [ "Kation" ],
   "frameworks": {
     "netstandard1.5": {
-      "imports": "dnxcore50",
+      "imports": "",
       "dependencies": {
-        "System.Security.Claims": "4.0.1-rc2-24027",
-        "System.Security.Principal": "4.0.1-rc2-24027",
-        "NETStandard.Library": "1.5.0-rc2-24027"
+        "System.Security.Claims": "4.0.1",
+        "System.Security.Principal": "4.0.1"
       }
     },
     "net451": { }
   },
   "dependencies": {
+    "NETStandard.Library": "1.6.0"
   }
 }
