--- a/src/samples/Wodsoft.ComBoost.Forum.Core/project.json
+++ b/src/samples/Wodsoft.ComBoost.Forum.Core/project.json
@@ -4,11 +4,11 @@
   "authors": [ "Kation" ],
   "frameworks": {
     "netstandard1.5": {
-      "imports": "dnxcore50"
+      "imports": ""
     }
   },
   "dependencies": {
-    "NETStandard.Library": "1.5.0-rc2-24027",
+    "NETStandard.Library": "1.6.0",
     "Wodsoft.ComBoost.Data": "1.0.0-*"
   }
 }
