--- a/src/samples/Wodsoft.ComBoost.Forum.Entity/project.json
+++ b/src/samples/Wodsoft.ComBoost.Forum.Entity/project.json
@@ -4,12 +4,12 @@
   "authors": [ "Kation" ],
   "frameworks": {
     "netstandard1.5": {
-      "imports": "dnxcore50"
+      "imports": ""
     }
   },
   "dependencies": {
-    "NETStandard.Library": "1.5.0-rc2-24027",
-    "System.Security.Cryptography.Algorithms": "4.1.0-rc2-24027",
+    "NETStandard.Library": "1.6.0",
+    "System.Security.Cryptography.Algorithms": "4.2.0",
     "Wodsoft.ComBoost.Forum.Core": "1.0.0-*"
   }
 }
