--- a/src/Wodsoft.ComBoost.Data/project.json
+++ b/src/Wodsoft.ComBoost.Data/project.json
@@ -6,6 +6,8 @@
     "netstandard1.5": {
       "imports": "",
       "dependencies": {
+        "System.ComponentModel.Annotations": "4.1.0",
+        "System.Linq.Queryable": "4.0.1"
       }
     },
     "net451": {
@@ -15,8 +17,6 @@
     }
   },
   "dependencies": {
-    "System.ComponentModel.Annotations": "4.1.0",
-    "System.Linq.Queryable": "4.0.1",
     "Wodsoft.ComBoost": "1.0.0-*",
     "Wodsoft.ComBoost.Core": "1.0.0-*",
     "Wodsoft.ComBoost.Security": "1.0.0-*"
