--- a/src/Wodsoft.ComBoost.AspNetCore.Security/project.json
+++ b/src/Wodsoft.ComBoost.AspNetCore.Security/project.json
@@ -1,13 +1,13 @@
 {
-  "version": "1.0.0-*",
+  "version": "3.0.0-alpha1",
 
   "dependencies": {
     "Microsoft.AspNetCore.Authentication": "1.0.0",
-    "Wodsoft.ComBoost.Security": "1.0.0-*"
+    "Wodsoft.ComBoost.Security": "3.0.0-*"
   },
 
   "frameworks": {
-    "netstandard1.5": {
+    "netstandard1.6": {
       "imports": ""
     },
     "net451": { }
