--- a/src/Wodsoft.ComBoost.Data/project.json
+++ b/src/Wodsoft.ComBoost.Data/project.json
@@ -1,9 +1,9 @@
 {
-  "version": "1.0.0-*",
+  "version": "3.0.0-alpha1",
   "description": "Wodsoft.ComBoost.Data Class Library",
   "authors": [ "Kation" ],
   "frameworks": {
-    "netstandard1.5": {
+    "netstandard1.6": {
       "imports": "",
       "dependencies": {
         "System.ComponentModel.Annotations": "4.1.0",
@@ -13,12 +13,13 @@
     "net451": {
       "frameworkAssemblies": {
         "System.ComponentModel.DataAnnotations": "4.0.0.0"
+      },
+      "dependencies": {
       }
     }
   },
   "dependencies": {
-    "Wodsoft.ComBoost": "1.0.0-*",
-    "Wodsoft.ComBoost.Core": "1.0.0-*",
-    "Wodsoft.ComBoost.Security": "1.0.0-*"
+    "Wodsoft.ComBoost.Security": "3.0.0-*",
+    "Wodsoft.ComBoost": "3.0.0-*"
   }
 }
