--- a/src/Wodsoft.ComBoost.Mvc.Data/project.json
+++ b/src/Wodsoft.ComBoost.Mvc.Data/project.json
@@ -1,16 +1,21 @@
 {
-  "version": "1.0.0-*",
+  "version": "3.0.0-alpha1",
   "description": "Wodsoft.ComBoost.Mvc.Data Class Library",
   "authors": [ "Kation" ],
   "frameworks": {
     "netstandard1.6": {
-      "imports": "dnxcore50"
+      "imports": [ "dnxcore50" ],
+      "dependencies": {
+      }
     },
-    "net451": { }
+    "net451": {
+      "dependencies": {
+      }
+    }
   },
   "dependencies": {
     "Microsoft.OData.Core": "6.15.0",
-    "Wodsoft.ComBoost.Data": "1.0.0-*",
-    "Wodsoft.ComBoost.Mvc": "1.0.0-*"
+    "Wodsoft.ComBoost.Data": "3.0.0-*",
+    "Wodsoft.ComBoost.Mvc": "3.0.0-*"
   }
 }
