--- a/src/Wodsoft.ComBoost.Mvc/project.json
+++ b/src/Wodsoft.ComBoost.Mvc/project.json
@@ -1,17 +1,22 @@
 {
-  "version": "1.0.0-*",
+  "version": "3.0.0-alpha1",
   "description": "Wodsoft.ComBoost.Mvc Class Library",
   "authors": [ "Kation" ],
   "frameworks": {
     "netstandard1.6": {
-      "imports": ""
+      "imports": [ "" ],
+      "dependencies": {
+        "NETStandard.Library": "1.6.0"
+      }
     },
-    "net451": { }
+    "net451": {
+      "dependencies": {
+      }
+    }
   },
   "dependencies": {
-    "Wodsoft.ComBoost": "1.0.0-*",
-    "Wodsoft.ComBoost.Core": "1.0.0-*",
-    "Wodsoft.ComBoost.AspNetCore.Security": "1.0.0-*",
+    "Wodsoft.ComBoost": "3.0.0-*",
+    "Wodsoft.ComBoost.AspNetCore.Security": "3.0.0-*",
     "Microsoft.AspNetCore.Mvc.ViewFeatures": "1.0.0",
     "Microsoft.Extensions.DependencyInjection": "1.0.0",
     "Microsoft.Extensions.Options": "1.0.0"
