--- a/src/Wodsoft.ComBoost/project.json
+++ b/src/Wodsoft.ComBoost/project.json
@@ -1,9 +1,9 @@
 {
-  "version": "1.0.0-*",
+  "version": "3.0.0-alpha1",
   "description": "Wodsoft.ComBoost Class Library",
   "authors": [ "Kation" ],
   "frameworks": {
-    "netstandard1.5": {
+    "netstandard1.6": {
       "imports": "",
       "dependencies": {
         "System.Reflection.Extensions": "4.0.1",
@@ -12,10 +12,11 @@
     },
     "net451": {
       "dependencies": {
+        "System.Runtime": "4.0.10"
       }
     }
   },
   "dependencies": {
-    "Wodsoft.ComBoost.Core": "1.0.0-*"
+    "Wodsoft.ComBoost.Core": "3.0.0-*"
   }
 }
