--- a/src/samples/Wodsoft.ComBoost.Forum.Core/project.json
+++ b/src/samples/Wodsoft.ComBoost.Forum.Core/project.json
@@ -3,12 +3,14 @@
   "description": "Wodsoft.ComBoost.Forum.Core Class Library",
   "authors": [ "Kation" ],
   "frameworks": {
-    "netstandard1.5": {
-      "imports": ""
+    "netstandard1.6": {
+      "imports": "",
+      "dependencies": {
+        "NETStandard.Library": "1.6.0"
+      }
     }
   },
   "dependencies": {
-    "NETStandard.Library": "1.6.0",
-    "Wodsoft.ComBoost.Data": "1.0.0-*"
+    "Wodsoft.ComBoost.Data": "3.0.0-*"
   }
 }
