--- a/src/samples/Wodsoft.ComBoost.Forum.Domain/project.json
+++ b/src/samples/Wodsoft.ComBoost.Forum.Domain/project.json
@@ -3,15 +3,15 @@
   "description": "Wodsoft.ComBoost.Forum.Domain Class Library",
   "authors": [ "Kation" ],
   "frameworks": {
-    "netstandard1.5": {
-      "imports": ""
+    "netstandard1.6": {
+      "imports": "",
+      "dependencies": {
+        "NETStandard.Library": "1.6.0",
+        "Wodsoft.ComBoost.Forum.Core": "1.0.0-*",
+        "Wodsoft.ComBoost.Security": "3.0.0-*"
+      }
     }
   },
   "dependencies": {
-    "Wodsoft.ComBoost": "1.0.0-*",
-    "Wodsoft.ComBoost.Core": "1.0.0-*",
-    "Wodsoft.ComBoost.Data": "1.0.0-*",
-    "Wodsoft.ComBoost.Forum.Core": "1.0.0-*",
-    "Wodsoft.ComBoost.Security": "1.0.0-*"
   }
 }
