--- a/src/samples/Wodsoft.ComBoost.Forum.Entity/project.json
+++ b/src/samples/Wodsoft.ComBoost.Forum.Entity/project.json
@@ -3,12 +3,14 @@
   "description": "Wodsoft.ComBoost.Forum.Entity Class Library",
   "authors": [ "Kation" ],
   "frameworks": {
-    "netstandard1.5": {
-      "imports": ""
+    "netstandard1.6": {
+      "imports": "",
+      "dependencies": {
+        "NETStandard.Library": "1.6.0"
+      }
     }
   },
   "dependencies": {
-    "NETStandard.Library": "1.6.0",
     "System.Security.Cryptography.Algorithms": "4.2.0",
     "Wodsoft.ComBoost.Forum.Core": "1.0.0-*"
   }
