更新版本号

--- a/src/Wodsoft.ComBoost.Core/project.json
+++ b/src/Wodsoft.ComBoost.Core/project.json
@@ -1,7 +1,18 @@
-{
-  "title": "ComBoost Core",
+﻿{
+  "title": "ComBoost.Core",
   "version": "3.0.0-alpha1",
-
+  "authors": [ "Kation" ],
+  "description": "ComBoost框架核心。",
+  "packOptions": {
+    "owners": [ "Kation" ],
+    "summary": "ComBoost框架核心。",
+    "tags": [ "ComBoost" ],
+    "repository": {
+      "type": "git",
+      "url": "https://github.com/Kation/ComBoost"
+    },
+    "releaseNotes": "Alpha测试版，请勿用于正式环境。"
+  },
   "dependencies": {
     "Microsoft.Extensions.DependencyInjection.Abstractions": "1.0.0"
   },
