--- a/src/Wodsoft.ComBoost.AspNetCore.Security/project.json
+++ b/src/Wodsoft.ComBoost.AspNetCore.Security/project.json
@@ -1,6 +1,18 @@
 {
+  "title": "ComBoost.AspNetCore.Security",
   "version": "3.0.0-alpha1",
-
+  "authors": [ "Kation" ],
+  "description": "ComBoost用于AspNet Core的安全模块。",
+  "packOptions": {
+    "owners": [ "Kation" ],
+    "summary": "ComBoost用于AspNet Core的安全模块。",
+    "tags": [ "ComBoost" ],
+    "repository": {
+      "type": "git",
+      "url": "https://github.com/Kation/ComBoost"
+    },
+    "releaseNotes": "Alpha测试版，请勿用于正式环境。"
+  },
   "dependencies": {
     "Microsoft.AspNetCore.Authentication": "1.0.0",
     "Wodsoft.ComBoost.Security": "3.0.0-*"
@@ -10,6 +22,6 @@
     "netstandard1.6": {
       "imports": ""
     },
-    "net451": { }
+    "net451": {}
   }
 }
