--- a/src/Wodsoft.ComBoost.Mvc/project.json
+++ b/src/Wodsoft.ComBoost.Mvc/project.json
@@ -1,7 +1,18 @@
 {
+  "title": "ComBoost.Mvc",
   "version": "3.0.0-alpha1",
-  "description": "Wodsoft.ComBoost.Mvc Class Library",
   "authors": [ "Kation" ],
+  "description": "ComBoost用于AspNetCore的Mvc模块。",
+  "packOptions": {
+    "owners": [ "Kation" ],
+    "summary": "ComBoost用于AspNetCore的Mvc模块。",
+    "tags": [ "ComBoost" ],
+    "repository": {
+      "type": "git",
+      "url": "https://github.com/Kation/ComBoost"
+    },
+    "releaseNotes": "Alpha测试版，请勿用于正式环境。"
+  },
   "frameworks": {
     "netstandard1.6": {
       "imports": [ "" ],
