--- a/src/Wodsoft.ComBoost.AspNetCore.Security/project.json
+++ b/src/Wodsoft.ComBoost.AspNetCore.Security/project.json
@@ -15,7 +15,7 @@
   },
   "dependencies": {
     "Microsoft.AspNetCore.Authentication": "1.0.0",
-    "Wodsoft.ComBoost.Security": "3.0.0-*"
+    "Wodsoft.ComBoost.Security": "[3.0.0-alpha1,4.0.0)"
   },
 
   "frameworks": {
