--- a/src/Wodsoft.ComBoost.Data/project.json
+++ b/src/Wodsoft.ComBoost.Data/project.json
@@ -30,7 +30,7 @@
     }
   },
   "dependencies": {
-    "Wodsoft.ComBoost.Security": "3.0.0-*",
-    "Wodsoft.ComBoost": "3.0.0-*"
+    "Wodsoft.ComBoost.Security": "[3.0.0-alpha1,4.0.0)",
+    "Wodsoft.ComBoost": "[3.0.0-alpha1,4.0.0)"
   }
 }
