--- a/src/Wodsoft.ComBoost.Mvc.Data/project.json
+++ b/src/Wodsoft.ComBoost.Mvc.Data/project.json
@@ -15,18 +15,18 @@
   },
   "frameworks": {
     "netstandard1.6": {
-      "imports": [ "dnxcore50" ],
+      "imports": [ "dnxcore50", "portable-net45+wp8+win8+wpa", "portable-net45+win8+wpa81" ],
       "dependencies": {
       }
     },
     "net451": {
       "dependencies": {
+
       }
     }
   },
   "dependencies": {
-    "Microsoft.OData.Core": "6.15.0",
-    "Wodsoft.ComBoost.Data": "3.0.0-*",
-    "Wodsoft.ComBoost.Mvc": "3.0.0-*"
+    "Wodsoft.ComBoost.Data": "[3.0.0-alpha1,4.0.0)",
+    "Wodsoft.ComBoost.Mvc": "[3.0.0-alpha1,4.0.0)"
   }
 }
