--- a/src/Wodsoft.ComBoost.Mvc/project.json
+++ b/src/Wodsoft.ComBoost.Mvc/project.json
@@ -2,16 +2,16 @@
   "title": "ComBoost.Mvc",
   "version": "3.0.0-alpha1",
   "authors": [ "Kation" ],
-  "description": "ComBoostÓÃÓÚAspNetCoreµÄMvcÄ£¿é¡£",
+  "description": "ComBoostç”¨äºAspNetCoreçš„Mvcæ¨¡å—ã€‚",
   "packOptions": {
     "owners": [ "Kation" ],
-    "summary": "ComBoostÓÃÓÚAspNetCoreµÄMvcÄ£¿é¡£",
+    "summary": "ComBoostç”¨äºAspNetCoreçš„Mvcæ¨¡å—ã€‚",
     "tags": [ "ComBoost" ],
     "repository": {
       "type": "git",
       "url": "https://github.com/Kation/ComBoost"
     },
-    "releaseNotes": "Alpha²âÊÔ°æ£¬ÇëÎğÓÃÓÚÕıÊ½»·¾³¡£"
+    "releaseNotes": "Alphaæµ‹è¯•ç‰ˆï¼Œè¯·å‹¿ç”¨äºæ­£å¼ç¯å¢ƒã€‚"
   },
   "frameworks": {
     "netstandard1.6": {
@@ -26,10 +26,10 @@
     }
   },
   "dependencies": {
-    "Wodsoft.ComBoost": "3.0.0-*",
-    "Wodsoft.ComBoost.AspNetCore.Security": "3.0.0-*",
-    "Microsoft.AspNetCore.Mvc.ViewFeatures": "1.0.0",
+    "Wodsoft.ComBoost": "[3.0.0-alpha1,4.0.0)",
+    "Wodsoft.ComBoost.AspNetCore.Security": "[3.0.0-alpha1,4.0.0)",
     "Microsoft.Extensions.DependencyInjection": "1.0.0",
-    "Microsoft.Extensions.Options": "1.0.0"
+    "Microsoft.Extensions.Options": "1.0.0",
+    "Microsoft.AspNetCore.Mvc.ViewFeatures": "1.0.1"
   }
 }
