--- a/src/Wodsoft.ComBoost.Mvc.Data/project.json
+++ b/src/Wodsoft.ComBoost.Mvc.Data/project.json
@@ -2,16 +2,16 @@
   "title": "ComBoost.Mvc.Data",
   "version": "3.0.0-alpha1",
   "authors": [ "Kation" ],
-  "description": "ComBoostÓÃÓÚAspNetCore MvcµÄÊµÌåÄ£¿é¡£",
+  "description": "ComBoostç”¨äºAspNetCore Mvcçš„å®ä½“æ¨¡å—ã€‚",
   "packOptions": {
     "owners": [ "Kation" ],
-    "summary": "ComBoostÓÃÓÚAspNetCore MvcµÄÊµÌåÄ£¿é¡£",
+    "summary": "ComBoostç”¨äºAspNetCore Mvcçš„å®ä½“æ¨¡å—ã€‚",
     "tags": [ "ComBoost" ],
     "repository": {
       "type": "git",
       "url": "https://github.com/Kation/ComBoost"
     },
-    "releaseNotes": "Alpha²âÊÔ°æ£¬ÇëÎğÓÃÓÚÕıÊ½»·¾³¡£"
+    "releaseNotes": "Alphaæµ‹è¯•ç‰ˆï¼Œè¯·å‹¿ç”¨äºæ­£å¼ç¯å¢ƒã€‚"
   },
   "frameworks": {
     "netstandard1.6": {
@@ -27,6 +27,8 @@
   },
   "dependencies": {
     "Wodsoft.ComBoost.Data": "[3.0.0-alpha1,4.0.0)",
-    "Wodsoft.ComBoost.Mvc": "[3.0.0-alpha1,4.0.0)"
+    "Wodsoft.ComBoost.Mvc": "[3.0.0-alpha1,4.0.0)",
+    "Microsoft.OData.Core": "7.0.0",
+    "Microsoft.OData.Edm": "7.0.0"
   }
 }
