--- a/src/samples/Wodsoft.ComBoost.Forum/appsettings.json
+++ b/src/samples/Wodsoft.ComBoost.Forum/appsettings.json
@@ -1,6 +1,6 @@
 ﻿{
   "ConnectionStrings": {
-    "DataContext": "server=(local);database=ComBoostForum;uid=sa;pwd=123@abc"
+    "DataContext": "server=10.0.0.253;database=ComBoostForum;uid=sa;pwd=123@abc"
   },
   "Logging": {
     "IncludeScopes": false,
