--- a/src/Wodsoft.ComBoost.EntityFrameworkCore/project.json
+++ b/src/Wodsoft.ComBoost.EntityFrameworkCore/project.json
@@ -2,10 +2,10 @@
   "title": "ComBoost.EntityFramework",
   "version": "3.0.0-alpha1",
   "authors": [ "Kation" ],
-  "description": "ComBoost用于EntityFramework实现的实体模块。",
+  "description": "ComBoost用于EntityFrameworkCore实现的实体模块。",
   "packOptions": {
     "owners": [ "Kation" ],
-    "summary": "ComBoost用于EntityFramework实现的实体模块。",
+    "summary": "ComBoost用于EntityFrameworkCore实现的实体模块。",
     "tags": [ "ComBoost" ],
     "repository": {
       "type": "git",
