--- a/src/Wodsoft.ComBoost.AspNetCore.Security/project.json
+++ b/src/Wodsoft.ComBoost.AspNetCore.Security/project.json
@@ -1,5 +1,5 @@
 {
-  "title": "ComBoost.AspNetCore.Security",
+  "title": "Wodsoft.ComBoost.AspNetCore.Security",
   "version": "3.0.0-alpha1",
   "authors": [ "Kation" ],
   "description": "ComBoost用于AspNet Core的安全模块。",
