--- a/src/Wodsoft.ComBoost.Core/project.json
+++ b/src/Wodsoft.ComBoost.Core/project.json
@@ -1,5 +1,5 @@
 {
-  "title": "ComBoost.Core",
+  "title": "Wodsoft.ComBoost.Core",
   "version": "3.0.0-alpha1",
   "authors": [ "Kation" ],
   "description": "ComBoost框架核心。",
