--- a/src/Wodsoft.ComBoost.EntityFramework/project.json
+++ b/src/Wodsoft.ComBoost.EntityFramework/project.json
@@ -1,5 +1,5 @@
 ﻿{
-  "title": "ComBoost.EntityFramework",
+  "title": "Wodsoft.ComBoost.EntityFramework",
   "version": "3.0.0-alpha1",
   "authors": [ "Kation" ],
   "description": "ComBoost用于EntityFramework实现的实体模块。",
