--- a/src/Wodsoft.ComBoost.Mvc.Data/project.json
+++ b/src/Wodsoft.ComBoost.Mvc.Data/project.json
@@ -1,5 +1,5 @@
 {
-  "title": "ComBoost.Mvc.Data",
+  "title": "Wodsoft.ComBoost.Mvc.Data",
   "version": "3.0.0-alpha1",
   "authors": [ "Kation" ],
   "description": "ComBoost用于AspNetCore Mvc的实体模块。",
