--- a/src/Wodsoft.ComBoost.Mvc/project.json
+++ b/src/Wodsoft.ComBoost.Mvc/project.json
@@ -1,5 +1,5 @@
 {
-  "title": "ComBoost.Mvc",
+  "title": "Wodsoft.ComBoost.Mvc",
   "version": "3.0.0-alpha1",
   "authors": [ "Kation" ],
   "description": "ComBoost用于AspNetCore的Mvc模块。",
