--- a/src/Wodsoft.ComBoost/project.json
+++ b/src/Wodsoft.ComBoost/project.json
@@ -1,5 +1,5 @@
 {
-  "title": "ComBoost",
+  "title": "Wodsoft.ComBoost",
   "version": "3.0.0-alpha1",
   "authors": [ "Kation" ],
   "description": "ComBoost框架基础。",
